# kinetis-isp

./: .gitlab-ci.yml  CMakeLists.txt  Readme.md
.github/workflows/: ci.yml  codeql.yml
cmake/: toolchain-aarch64-oe-linux.cmake
script/: build-deps.sh  build.sh
src/: CMakeLists.txt  application.cpp  application.h  firmware_reader.cpp  firmware_reader.h  ftdi.hpp  ftdi_linux.cpp  ftdi_linux.h  vid_pid_reader.cpp
test/: ftdi_mock.h
